--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ canvas{
   width: 90%;
   font-size: medium;
   display: flex;
+  gap: 20px;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.01);
